syntax = "proto3";

option go_package = "github.com/KyloRilo/helios/proto";
package proto;

service Cloud {
    rpc ListObjects (ListReq) returns (ListResp) {}
    rpc GetObject (GetReq) returns (GetResp) {}
    rpc PutObject (PutReq) returns (PutResp) {}
}

message ListReq {
    string bucket = 1;
    string prefix = 2;
}

message ListResp {
    repeated string objects = 1;
}

message GetReq {
    string bucket = 1;
    string key = 2;
}

message GetResp {
    string contents = 1;
}

message PutReq {
    string bucket = 1;
    string key = 2;
    string contents = 3;
}

message PutResp {
    string meta = 1;
}